examples/test/testpolicy5056.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5056
  namespace: namespace325
spec:
  podSelector:
    matchLabels:
      key43: value21
      key37: value2
      key32: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value20
          key22: value32
          key0: value14
      podSelector:
        matchLabels:
          key46: value45
